# danmaku_engine

./: .gitignore  .gitmodules  .luarc.json  CMakeLists.txt  build.sh  run.sh  todo.md
docs/: lua_api.md  lua_api_example.lua
res/script/: cmplx.lua  coroutine_test.lua  log.lua  task.lua  test_level.lua  util.lua
res/script/stage/: test.lua
res/shader/: frontend.fs.glsl  frontend.vs.glsl  model.fs.glsl  model.vs.glsl  sprite.vs.glsl
res/shaders/: font.vs.glsl  skybox.fs.glsl  skybox.vs.glsl  sprite.fs.glsl
res/spritesheet/: chara.chima  chara.json  chara_cirno.json  chara_marisa.json  chara_reimu.json  chen_p.json  effects.json
res/spritesheets/: 2hus.json  cirno.json  enemies.json
script/: make_chima_sheets.lua  test_level.lua
src/: boss.cpp  boss.hpp  context.cpp  context.hpp  core.hpp  danmaku.hpp  enemy.cpp  enemy.hpp  event.hpp  frontend.cpp  frontend.hpp  global.cpp  global.hpp  input.cpp  input.hpp  level.cpp  level.hpp  main.cpp  math.hpp  okuu.hpp  package.cpp  package.hpp  player.cpp  player.hpp  render.cpp  render.hpp  renderer.cpp  renderer.hpp  resources.cpp  resources.hpp  stage.cpp  stage.hpp  state.hpp
src/assets/: chima.hpp  manager.cpp  manager.hpp  package.cpp  package.hpp  resources.hpp  sprite.cpp  sprite.hpp
src/component/: component.hpp  entity.hpp  sprite_component.cpp  sprite_component.hpp
src/entity/: animator.cpp  animator.hpp  boss.cpp  boss.hpp  movement.hpp  particle.hpp  player.cpp  player.hpp  projectile.cpp  projectile.hpp
src/game/: context.cpp  context.hpp  entity.cpp  entity.hpp  package.cpp  package.hpp
src/level/: level.hpp  test_level.cpp  test_level.hpp
src/lua/: assets.cpp  assets.hpp  math.cpp  package.cpp  package.hpp  sol.hpp  stage.cpp  stage.hpp  stage_env.cpp  stage_env.hpp
src/package/: lua_state.cpp  lua_state.hpp  package.cpp  package.hpp
src/render/: common.hpp  instance.cpp  instance.hpp  render.cpp  render.hpp  shader_src.cpp  shader_src.hpp  stage.cpp  stage.hpp
src/render/ui/: frontend.cpp
src/script/: lua_env.cpp  lua_env.hpp  package.cpp  package.hpp
src/stage/: animator.hpp  boss.cpp  boss.hpp  entity.cpp  entity.hpp  entity_pool.hpp  entity_pool.inl  movement.cpp  player.cpp  player.hpp  projectile.hpp  stage.cpp  stage.hpp  state.cpp  state.hpp
src/stage/entity/: boss.cpp  boss.hpp  item.hpp  laser.hpp  movement.hpp  player.cpp  player.hpp  projectile.cpp  projectile.hpp  stage_entity.hpp
src/ui/: frontend.cpp  frontend.hpp  stage_viewport.hpp  widget.hpp
src/util/: event.hpp  free_list.hpp
